--- a/package.json
+++ b/package.json
@@ -61,8 +61,10 @@
 		"find-up-simple": "^1.0.1",
 		"load-json-file": "^7.0.1",
 		"read-pkg": "^9.0.1",
-		"vite": "^6.1.0",
 		"wext-manifest-transformer": "^1.1.1"
+	},
+	"peerDependencies": {
+		"vite": "^6.3.5"
 	},
 	"devDependencies": {
 		"@abhijithvijayan/eslint-config": "^2.8.0",
@@ -87,6 +89,7 @@
 		"prettier": "^3.2.4",
 		"rimraf": "^3.0.2",
 		"ts-jest": "^26.5.6",
-		"typescript": "^4.9.5"
+		"typescript": "^4.9.5",
+		"vite": "^6.3.5"
 	}
 }
