--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 	"lib": [
 	  "dom",
 	  "dom.iterable",
-	  "esnext"
+	  "ES2022"
 	]
   },
   "include": [
@@ -14,6 +14,8 @@
 	"jest.config.js"
   ],
   "exclude": [
+	"node_modules",
+	"lib",
 	"tests/**/*.test.ts"
   ]
 }
