--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "vite-plugin-wext-manifest",
-	"version": "1.1.0",
+	"version": "1.1.1",
 	"description": "Vite plugin that lets you specify `manifest.json` properties to appear only in specific browsers.",
 	"license": "MIT",
 	"repository": "https://github.com/abhijithvijayan/vite-plugin-wext-manifest.git",
@@ -11,7 +11,7 @@
 		"url": "https://abhijithvijayan.in"
 	},
 	"engines": {
-		"node": ">=18"
+		"node": ">=20"
 	},
 	"type": "module",
 	"exports": {
@@ -22,11 +22,9 @@
 		"lib"
 	],
 	"scripts": {
-		"dev": "npm run build:esm -- --watch",
-		"build:esm": "tsc --outDir lib",
-		"build": "rimraf lib && npm run build:esm",
+		"dev": "tsc --outDir lib --watch",
+		"build": "rimraf lib && tsc --outDir lib",
 		"pack:list": "npm pack && tar -xvzf *.tgz && rm -rf package *.tgz",
-		"prepublishOnly": "npm run pack:list",
 		"test": "jest",
 		"test:watch": "jest --watch",
 		"lint": "eslint . --ext .ts",
@@ -91,7 +89,7 @@
 		"jest": "^29.7.0",
 		"lint-staged": "^11.0.0",
 		"prettier": "^3.2.4",
-		"rimraf": "^3.0.2",
+		"rimraf": "^6.0.1",
 		"typescript": "5.8.3",
 		"vite": "^6.3.5"
 	}
