--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
 		"@typescript-eslint/no-use-before-define": "warn",
 		"@typescript-eslint/no-explicit-any": "warn",
 		"import/no-import-module-exports": "off",
+		"import/no-unresolved": "off",
+		"node/no-missing-import": "off",
 		"node/no-unsupported-features/es-syntax": [
 			"error",
 			{
