--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
 		"wext-manifest-transformer": "^1.3.1"
 	},
 	"peerDependencies": {
-		"vite": "^6.3.5"
+		"vite": ">=5.0.0"
 	},
 	"devDependencies": {
 		"@abhijithvijayan/tsconfig": "^1.5.1",
@@ -84,6 +84,6 @@
 		"rimraf": "^6.0.1",
 		"typescript": "5.8.3",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^6.3.5"
+		"vite": "^7.3.0"
 	}
 }
